<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- MENU -->
    <string name="action_add">Add</string>
    <string name="action_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_convert">Currency converter</string>
    <string name="menu_map_view">Map</string>
    <string name="menu_loan_simulator">Loan simulator</string>
    <string name="menu_currency_converter">Currency converter</string>

    <!-- STRING IN CREATE NEW ESTATE -->
    <string name="agent_name_title">Name of the agent</string>
    <string name="estate_information">GENERAL INFORMATIONS</string>
    <string name="estate_price_hint">Price</string>
    <string name="estate_surface_hint">Surface</string>
    <string name="estate_rooms">ROOMS DETAILS</string>
    <string name="nb_bathrooms">Bathroom</string>
    <string name="nb_bedrooms">Bedroom</string>
    <string name="nb_total_rooms">Total</string>
    <string name="estate_address">ADDRESS</string>
    <string name="estate_address_hint">Address</string>
    <string name="estate_description">DESCRIPTION</string>
    <string name="estate_status_title">STATUS</string>
    <string name="estate_description_hint">Enter a complete description</string>
    <string name="button_valid">CONTINUE</string>
    <string name="thumbnail_content_description">Thumbnail</string>
    <string name="icon_drop_down_content_description">Drop Down Arrow</string>
    <string name="photo_title">Pick a photo</string>
    <string name="photo_camera">From the phone camera</string>
    <string name="agent_name">Name of the agent</string>
    <string name="photo_gallery">From the phone gallery</string>
    <string name="checkbox_sold">Is this estate sold ?</string>
    <string name="sold_date">Sold date</string>
    <string name="delete_image_content_description">Delete image</string>
    <string name="sold_date_format">%1$d/%2$s/%3$s</string>
    <string name="type_and_city">%1$s • %2$s</string>
    <string name="no_description">This real estate has not any description yet.</string>
    <string name="poi_title">Points of interest</string>
    <string name="details_pois">Proximity: %1$s</string>

    <!-- FILTER STRINGS -->
    <string name="filter_title">FILTER</string>
    <string name="filter_price">Price</string>
    <string name="filter_surface">Surface</string>
    <string name="filter_room">Number of minimum rooms</string>
    <string name="filter_photos">Number of minimum photos</string>
    <string name="filter_type">Type of the estate</string>
    <string name="filter_points_of_interest">Points of interest</string>
    <string name="filter_locality">Location (city, state or province)</string>
    <string name="filter_only_sold">Only display sold estates ?</string>
    <string name="filter_only_with_photos">Only display estates with photos ?</string>
    <string name="filter_locality_format">%%%1$s%%</string>
    <string name="null_or_empty">%%</string>

    <!-- DIALOGS STRINGS -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_reset">RESET ALL</string>
    <string name="dialog_room_desc_title">Room</string>
    <string name="dialog_inputs_title">Bad inputs</string>
    <string name="dialog_verfy_inputs">Please check inputs</string>
    <string name="converter_title">CONVERTER</string>
    <string name="converter_rate">Current rate: \n1€ = 0.831$\n(rounded up)</string>

    <!-- ARRAYS -->
    <string-array name="estate_type">
        <item>Flat</item>
        <item>Apartment</item>
        <item>Loft</item>
        <item>Manor</item>
        <item>Penthouse</item>
    </string-array>

    <string-array name="point_of_interest">
        <item>School</item>
        <item>High school</item>
        <item>Park</item>
        <item>Restaurant</item>
        <item>Public transport</item>
        <item>Beach</item>
        <item>Zoo</item>
        <item>Downtown</item>
        <item>Marina</item>
        <item>Nightclub</item>
    </string-array>

    <!-- ADAPTERS -->
    <string name="has_been_sold">SOLD</string>
    <string name="still_available">AVAILABLE</string>
    <string name="custom_map_price_and_surface">%1$s - %2$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
