<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/std_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_margin"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            android:text="@string/photo_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/from_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_margin"
            android:drawableStart="@drawable/ic_photo_camera"
            android:textAlignment="center"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/photo_camera" />

        <TextView
            android:id="@+id/from_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin"
            android:drawableStart="@drawable/ic_photo_gallery"
            android:textAlignment="center"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/photo_gallery" />

    </LinearLayout>

</LinearLayout>