<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/std_margin">

        <TextView
            android:id="@+id/textview_filter_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_price" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/seekbar_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:steps="1000"
                app:left_thumb_color="@color/colorPrimary"
                app:left_thumb_color_pressed="@color/colorSecondary"
                app:right_thumb_color="@color/colorPrimary"
                app:right_thumb_color_pressed="@color/colorSecondary" />

            <TextView
                android:id="@+id/textview_filter_min_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbar_price"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="0"
                android:textColor="#000" />

            <TextView
                android:id="@+id/textview_filter_max_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbar_price"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="0"
                android:textColor="#000" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textview_filter_price2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_surface" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/seekbar_surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:gap="10"
                app:left_thumb_color="@color/colorPrimary"
                app:left_thumb_color_pressed="@color/colorSecondary"
                app:right_thumb_color="@color/colorPrimary"
                app:right_thumb_color_pressed="@color/colorSecondary"/>

            <TextView
                android:id="@+id/textview_filter_min_surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbar_surface"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="0"
                android:textColor="#000" />

            <TextView
                android:id="@+id/textview_filter_max_surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbar_surface"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="0"
                android:textColor="#000" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_filter_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/filter_room" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:textAlignment="center"
                android:textSize="@dimen/font_size_edittext_small"
                android:layout_marginStart="@dimen/std_margin"
                android:inputType="number"
                android:maxLength="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_filter_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/filter_photos" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginStart="@dimen/std_margin"
                android:textAlignment="center"
                android:textSize="@dimen/font_size_edittext_small"
                android:inputType="number"
                android:maxLength="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_type" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/filter_points_of_interest"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_pois"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/filter_locality" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textSize="@dimen/font_size_edittext_small"
                android:textAlignment="center"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/checkbox_sold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:text="@string/sold_date"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
