<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activities.CreateRealEstate"
    tools:showIn="@layout/activity_create_real_estate">
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/std_margin">

        <LinearLayout
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorSecondary"
            android:layout_margin="@dimen/std_margin">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_photo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="@dimen/std_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_estate_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/std_margin"
                        android:layout_margin="@dimen/std_margin"
                        android:scaleType="centerCrop"
                        android:layout_weight="0.555"
                        android:src="@drawable/add_image"
                        android:contentDescription="@string/thumbnail_content_description" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/std_margin"
                        android:layout_weight="0.3"
                        android:orientation="horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_estate_informations"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="@dimen/std_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/std_margin"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/estate_information" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/std_margin">

                        <Spinner
                            android:id="@+id/spinner_estate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/std_margin"
                            android:layout_marginEnd="@dimen/std_margin"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/std_margin"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_margin="@dimen/std_margin">

                            <EditText
                                android:id="@+id/edittext_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:drawableStart="@drawable/ic_price"
                                android:inputType="number"
                                android:hint="@string/estate_price_hint"
                                android:importantForAutofill="no" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_margin="@dimen/std_margin">

                            <EditText
                                android:id="@+id/edittext_surface"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/ic_surface"
                                android:textAlignment="center"
                                android:inputType="number"
                                android:hint="@string/estate_surface_hint"
                                android:importantForAutofill="no" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_rooms"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="@dimen/std_margin">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/std_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/estate_rooms" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_margin="@dimen/std_margin">

                        <EditText
                            android:id="@+id/edittext_nb_bathroom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_bathroom"
                            android:textAlignment="center"
                            android:inputType="number"
                            android:hint="@string/nb_bathrooms"
                            android:importantForAutofill="no" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_margin="@dimen/std_margin">

                        <EditText
                            android:id="@+id/edittext_nb_bedroom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:inputType="number"
                            android:drawableStart="@drawable/ic_bedroom"
                            android:hint="@string/nb_bedrooms"
                            android:importantForAutofill="no" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_margin="@dimen/std_margin">

                        <EditText
                            android:id="@+id/edittext_nb_other_rooms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_other_rooms"
                            android:textAlignment="center"
                            android:inputType="number"
                            android:hint="@string/nb_other_rooms"
                            android:importantForAutofill="no" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_adress"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="@dimen/std_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/std_margin"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/estate_address" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:baselineAligned="false">

                        <EditText
                            android:id="@+id/edittext_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:drawableStart="@drawable/ic_place"
                            android:textAlignment="center"
                            android:hint="@string/estate_address_hint"
                            android:importantForAutofill="no" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_description"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:minHeight="120dp"
                android:layout_margin="@dimen/std_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/std_margin"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/estate_description" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:baselineAligned="false">

                        <EditText
                            android:id="@+id/edittext_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_description"
                            android:scrollbars="vertical"
                            android:inputType="textMultiLine"
                            android:hint="@string/estate_description_hint"
                            android:importantForAutofill="no" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/std_margin"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_radius_corner"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:text="@string/button_valid" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>